2011-03-15  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/templates.c, src/templates.h:
   Use the same indentation for all templates (part of FR#3193527; from
   a patch by Matthew Brush, thanks).


2011-03-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * data/filetype_extensions.conf:
   Add Markdown extension.


2011-03-10  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/toolbar.c:
   Correctly expand the menubar if the toolbar is appended to it but
   not visible (closes #3204955).
 * plugins/filebrowser.c, src/editor.c, src/plugins.c, src/symbols.c,
   src/tools.c, src/utils.c:
   Prefer prepend elements to lists rather than append them, for better
   performances.


2011-03-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/geany.h:
   Fix wrong code example in the API docs
   (spotted by Matthew Brush, thanks).


2011-03-07  Colomban Wendling  <colomban(at)geany(dot)org>

 * tagmanager/mio/mio-memory.c:
   Import upstream MIO changes not to require a C99 compiler.


2011-03-06  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/symbols.c:
   When sorting tags by line, also sort by scope if line is the same, avoiding
   wrong sorting if a parent tag is on the same line than its children, and one
   of it's children would be sorted before alphabetically (closes #3193982).


2011-03-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/interface.c, geany.glade:
   Fix typo.
 * src/search.c:
   Remember Find and Replace options across restarts
   (patch by Dimitar Zhekov, thanks).
   Cleanup.
   Respect saved state of 'Case sensitive' option when using
   the 'Regular expressions' option as well.
 * plugins/export.c:
   Add option to insert line numbers (closes #3197150).
   Cleanup.
   Use the full filename and add the extension of the export format.
   Fix off-by-one bug which hidden the last empty line of a document.


2011-03-05  Colomban Wendling  <colomban(at)geany(dot)org>
